--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-NODE_HOSTNAME=meshtastic.local
+# To connect to a device over a serial connection:
+
+TRANSPORT=serial
+DEVICE=detect             # To let the software try to find it
+#DEVICE=/dev/ttyUSB0      # To be specific about what device to connect with
+
+# To connect over your local network:
+
+#TRANSPORT=net
+#DEVICE=meshtastic.local  # You can use a locally known hostname
+#DEVICE=192.168.1.100     # or an IP address
