Add LLM support with the Ollama API

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DEVICE=detect             # To let the software try to find it
 #TRANSPORT=net
 #DEVICE=meshtastic.local  # You can use a locally known hostname
 #DEVICE=192.168.1.100     # or an IP address
+
+# Define an endpoint for the Ollama API to use the LLM module:
+
+OLLAMA_API=http://localhost:11434/api
+OLLAMA_MODEL=llama3:latest
