Give the LLM a couple of tools to work with (WIP)

--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ DEVICE=detect             # To let the software try to find it
 
 # Define an endpoint for the Ollama API to use the LLM module:
 
-OLLAMA_API=http://localhost:11434/api
-OLLAMA_MODEL=llama3:latest
+#OLLAMA_API=http://localhost:11434/api
+#OLLAMA_MODEL=llama3.1:latest
+#OLLAMA_LANGUAGE=Dutch    # Primary language the bot speaks in
