Make tools optional

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # To connect to a device over a serial connection:
 
 TRANSPORT=serial
-DEVICE=detect             # To let the software try to find it
+DEVICE=detect # To let the software try to find it
 #DEVICE=/dev/ttyUSB0      # To be specific about what device to connect with
 
 # To connect over your local network:
@@ -14,3 +14,4 @@ DEVICE=detect             # To let the software try to find it
 
 #OLLAMA_API=http://localhost:11434/api
 #OLLAMA_MODEL=llama3.1:latest
+#OLLAMA_USE_TOOLS=True    # Not every model can work with tools
