Refactor stuff a bit and start parsing incoming mesh packets

--- a/go/Makefile
+++ b/go/Makefile
@@ -2,6 +2,10 @@ SHELL := /bin/bash
 
 all: run
 
+update:
+	@go get -u
+	@go mod tidy
+
 install-protobuf-compiler:
 	@sudo dnf install protobuf-compiler
 	@go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
